Updates Giphy logos

--- a/src/components/giphy-search/editor.scss
+++ b/src/components/giphy-search/editor.scss
@@ -60,9 +60,9 @@
 	.wp-block-giphenberg-block-giphenberg {
 
 		.giphenberg-header {
-			background: url('../assets/images/powered-by-giphy.gif') top right no-repeat !important;
+			background: url('../assets/images/powered-by-giphy.png') top right / 121px 42px no-repeat !important;
 			min-height: 42px;
-			padding-right: 215px;
+			padding-right: 135px;
 		}
 	}
 }
