Adjusts styles for header logo

--- a/src/components/giphy-search/editor.scss
+++ b/src/components/giphy-search/editor.scss
@@ -57,7 +57,7 @@
 
 .wp-admin {
 
-	.wp-block-giphenberg-block-giphenberg {
+	.wp-block {
 
 		.giphenberg-header {
 			background: url('../assets/images/powered-by-giphy.png') top right / 121px 42px no-repeat !important;
